syntax = "proto3";

package status;

option go_package = "github.com/jgulick48/starlink-statsd;status";

service Status {
  rpc GetStatus (GetStatus) returns (StatusReply) {}
}

message StatusReply {
  string api_version = 1;
  message DishGetStatus {
    message DeviceInfo {
      string id = 1;
      string hardware_version = 2;
      string software_version = 3;
      string contry_code = 4;
      float utc_offset_s = 5;
      float bootcount = 6;
      string generation_number = 7;
    }
    message DeviceState {
      string uptime_s = 1;
    }
    message ObstructionStats {
      float valid_s = 1;
      string avg_prolonged_obstruction_interval_s = 2;
    }
    message Alerts {
      bool roaming = 1;
      bool is_heating = 2;
    }
    float downlink_throughput_bps = 1;
    float uplink_throughput_bps = 2;
    float pop_ping_latency_ms = 3;
    float boresight_azimuth_deg = 4;
    float boresight_elevation_deg = 5;
    message GPSStatus {
      bool gps_valid = 1;
      float gps_sats = 2;
    }
    float eth_speed_mbps = 6;
    string mobility_class = 7;
    bool is_snr_above_noise_floor = 8;
    message ReadyStates {
      bool cady = 1;
      bool scp = 2;
      bool l1l2 = 3;
      bool xphy = 4;
      bool aap = 5;
      bool rt = 6;
    }
    string software_update_state = 9;
    string has_actuators = 10;
    string disablement_code = 11;
  }
}

message GetStatus {

}